@@ -1,4 +1,4 @@
-/* $Id: views-admin.css,v 1.13 2009-04-07 19:34:35 merlinofchaos Exp $ */
+/* $Id: views-admin.css,v 1.13.2.1 2009-09-15 17:32:15 merlinofchaos Exp $ */
 
 /*
  * Summary pad
@@ -384,6 +384,22 @@ html.js #views-ajax-pad {
 #views-ajax-pad table td .form-item select {
   padding: 0;
   margin: 0;
+}
+
+#views-ajax-pad label.hidden-options {
+  background: transparent url(../images/arrow-active.png) no-repeat right;
+  height: 12px;
+  padding-right: 12px;
+}
+
+#views-ajax-pad label.expanded-options {
+  background: transparent url(../images/expanded-options.png) no-repeat right;
+  height: 12px;
+  padding-right: 16px;
+}
+
+#views-ajax-pad .dependent-options {
+  padding-left: 30px;
 }
 
 /*
